--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -61,7 +61,6 @@ allow 107.189.1.9;
 allow 107.189.1.96;
 allow 107.189.2.108;
 allow 107.189.28.199;
-allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
@@ -107,7 +106,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -203,6 +201,7 @@ allow 178.17.174.164;
 allow 178.17.174.198;
 allow 178.175.131.141;
 allow 178.175.142.26;
+allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.51;
@@ -654,6 +653,7 @@ allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
+allow 198.144.178.163;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -705,7 +705,6 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
-allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -797,14 +796,13 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
-allow 201.137.12.46;
+allow 201.137.255.80;
 allow 202.61.226.98;
 allow 202.61.252.121;
 allow 202.69.76.36;
@@ -834,6 +832,7 @@ allow 209.141.40.44;
 allow 209.141.45.167;
 allow 209.141.46.203;
 allow 209.141.50.178;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -986,6 +985,7 @@ allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:10:fa4:9e93:1da8:f7af:2e65;
 allow 2605:6400:20:104e::2;
+allow 2605:6400:20:170c::1;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -1232,7 +1232,6 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1510,6 +1509,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.217.99.28;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1607,7 +1607,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
-allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1632,7 +1631,6 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
-allow 54.160.44.5;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1687,6 +1685,7 @@ allow 82.153.138.79;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1694,7 +1693,6 @@ allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
@@ -1763,6 +1761,7 @@ allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
+allow 93.95.230.54;
 allow 93.95.231.14;
 allow 93.99.104.128;
 allow 93.99.104.18;
@@ -1785,7 +1784,6 @@ allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
-allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
