--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -61,6 +61,7 @@ allow 107.189.1.9;
 allow 107.189.1.96;
 allow 107.189.2.108;
 allow 107.189.28.199;
+allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
@@ -106,6 +107,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -532,7 +534,6 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
-allow 185.70.8.45;
 allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -548,7 +549,6 @@ allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
-allow 191.101.31.10;
 allow 191.252.92.147;
 allow 191.96.165.34;
 allow 192.210.255.181;
@@ -640,7 +640,6 @@ allow 193.35.18.77;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
-allow 194.163.157.49;
 allow 194.195.120.132;
 allow 194.233.174.56;
 allow 194.26.192.64;
@@ -705,6 +704,7 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
+allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -796,6 +796,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -842,7 +843,6 @@ allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
-allow 213.136.84.104;
 allow 213.156.142.30;
 allow 213.252.140.118;
 allow 213.95.149.22;
@@ -1117,6 +1117,7 @@ allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
+allow 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
@@ -1133,7 +1134,6 @@ allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
-allow 2a02:c207:3006:6498::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1221,7 +1221,6 @@ allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
-allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1232,6 +1231,7 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1495,9 +1495,11 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
+allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.173.12.207;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1509,7 +1511,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.217.99.28;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1571,7 +1572,6 @@ allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
 allow 45.92.1.74;
-allow 45.94.31.143;
 allow 45.94.31.180;
 allow 45.95.169.184;
 allow 45.95.169.228;
@@ -1607,7 +1607,9 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
+allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1693,6 +1695,7 @@ allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
@@ -1749,6 +1752,7 @@ allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.205.31.137;
 allow 92.243.24.163;
