--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -61,6 +61,7 @@ deny 107.189.1.9;
 deny 107.189.1.96;
 deny 107.189.2.108;
 deny 107.189.28.199;
+deny 107.189.29.103;
 deny 107.189.30.236;
 deny 107.189.30.69;
 deny 107.189.30.86;
@@ -106,6 +107,7 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
+deny 118.163.74.160;
 deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.31.0.13;
@@ -532,7 +534,6 @@ deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
 deny 185.67.82.114;
-deny 185.70.8.45;
 deny 185.70.8.46;
 deny 185.7.33.146;
 deny 185.82.219.109;
@@ -548,7 +549,6 @@ deny 188.68.52.231;
 deny 190.103.179.98;
 deny 190.120.229.98;
 deny 190.211.254.97;
-deny 191.101.31.10;
 deny 191.252.92.147;
 deny 191.96.165.34;
 deny 192.210.255.181;
@@ -640,7 +640,6 @@ deny 193.35.18.77;
 deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
-deny 194.163.157.49;
 deny 194.195.120.132;
 deny 194.233.174.56;
 deny 194.26.192.64;
@@ -705,6 +704,7 @@ deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:5c0::1;
+deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
@@ -796,6 +796,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -842,7 +843,6 @@ deny 212.21.66.6;
 deny 212.69.167.80;
 deny 212.73.134.204;
 deny 212.95.50.77;
-deny 213.136.84.104;
 deny 213.156.142.30;
 deny 213.252.140.118;
 deny 213.95.149.22;
@@ -1117,6 +1117,7 @@ deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
+deny 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
@@ -1133,7 +1134,6 @@ deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c207:3002:8283::1;
-deny 2a02:c207:3006:6498::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1221,7 +1221,6 @@ deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
-deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -1232,6 +1231,7 @@ deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
@@ -1495,9 +1495,11 @@ deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
+deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
 deny 35.0.127.52;
+deny 35.173.12.207;
 deny 37.1.201.144;
 deny 37.120.166.23;
 deny 37.120.188.156;
@@ -1509,7 +1511,6 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
-deny 44.217.99.28;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.130.20.250;
@@ -1571,7 +1572,6 @@ deny 45.9.148.219;
 deny 45.9.150.103;
 deny 45.9.150.130;
 deny 45.92.1.74;
-deny 45.94.31.143;
 deny 45.94.31.180;
 deny 45.95.169.184;
 deny 45.95.169.228;
@@ -1607,7 +1607,9 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.73.12;
 deny 5.196.8.113;
+deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
@@ -1693,6 +1695,7 @@ deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.247.165.51;
+deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
@@ -1749,6 +1752,7 @@ deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
 deny 91.92.109.43;
+deny 92.119.126.161;
 deny 92.205.129.119;
 deny 92.205.31.137;
 deny 92.243.24.163;
